# Agentic-Learning

smol-agent/: README.md  main.py  pyproject.toml
smol-agent/src/tools/: blender_ops.py  file_ops.py  judge_ops.py  todo_list.py
